--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,4 +1,3 @@
 Fedora
-dnf install swig
-Build & install owfs source with --enable-swig (needed for OW.pm)
-cpan TOML Net::MQTT::Simple
+dnf install perl-AnyEvent
+cpan TOML AnyEvent::OWNet AnyEvent::MQTT
