--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,3 +1,3 @@
 Fedora
-dnf install perl-AnyEvent
-cpan TOML AnyEvent::OWNet AnyEvent::MQTT
+dnf install perl-AnyEvent perl-HTML-Template-Pro perl-App-cpanminus.noarch libwebsockets-devel
+dzil listdeps | cpanm
