Prune away bits that don't relate to MQTT or OWFS
Signed-off-by: Alastair D'Silva <alastair@d-silva.org>

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,3 +1,4 @@
 Fedora
-dnf install perl-AnyEvent perl-HTML-Template-Pro perl-App-cpanminus.noarch libwebsockets-devel
-dzil listdeps | cpanm
+dnf install perl-AnyEvent perl-App-cpanminus.noarch perl-Dist-Zilla perl-File-Slurp.noarch perl-DateTime-Format-Strptime.noarch
+dzil listdeps | cpanm --sudo
+
